# Tagify

./: .gitignore  LICENSE  LICENSING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  activationInfo.ts  codes.ts  constants.ts  fields.ts  license.ts  licenseConfig.ts  orderImport.ts  print.ts  render.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  updater.rs
src/components/: ActivationScreen.tsx  CanvasArea.tsx  LabelStage.tsx  PrinterSelector.tsx  SizeSelector.tsx  Toast.tsx  Tour.tsx  UpdateGate.tsx
src/components/panels/: CanvaPanel.tsx  LotePanel.tsx  ProductsPanel.tsx  SettingsPanel.tsx  TimelinePanel.tsx
src/db/: index.ts
src/hooks/: useFitScale.ts
src/store/: useStore.ts
supabase/: .env.example  README.md  config.toml
supabase/functions/_shared/: util.ts
supabase/functions/activate/: index.ts
supabase/functions/mp-webhook/: index.ts
supabase/functions/validate/: index.ts
supabase/migrations/: 0001_licenses.sql
